ingress/ingress-resource.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: moviesplanet-ingress

#  annotations:
#
#    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  rules:

    - host: www.moviesplanet.com

      http:

        paths:

          - path: /api/customer

            pathType: Prefix

            backend:

              service:

                name: customer-outbound-service

                port:

                  number: 8082

          - path: /api/theater-inbound

            pathType: Prefix

            backend:

              service:

                name: theater-inbound-service

                port:

                  number: 8080
          - path: /api/theater-outbound

            pathType: Prefix

            backend:

              service:

                name: theater-outbound-service

                port:

                  number: 8081
